--- a/unit1_projects/stylesheets/eda2.css
+++ b/unit1_projects/stylesheets/eda2.css
@@ -61,11 +61,25 @@ body {
     width: 75%;
 }
 
-ul.left-menu li > a:hover {
-    color: white;
-}
-
 .clear {
 	clear: both;;
 	height: 10px;
+}
+
+a {
+	text-decoration: none;
+}
+
+ul.left-menu > li:first-child, 
+ul.left-menu > li:first-child > a {
+    color: #ff0000;
+}
+
+ul.left-menu li:last-child, 
+ul.left-menu li:last-child > a {
+    color: #ffd700;
+}
+
+ul.left-menu li > a:hover {
+    color: white;
 }
