--- a/unit1_projects/stylesheets/eda1.css
+++ b/unit1_projects/stylesheets/eda1.css
@@ -13,3 +13,21 @@ body {
 .p_blue {
 	color: blue;
 }
+
+a {
+	text-decoration: none;
+}
+
+ul.left-menu > li:first-child, 
+ul.left-menu > li:first-child > a {
+    color: #ff0000;
+}
+
+ul.left-menu li:last-child, 
+ul.left-menu li:last-child > a {
+    color: #ffd700;
+}
+
+ul.left-menu li > a:hover {
+    color: white;
+}
