--- a/blog-posts/stylesheet.css
+++ b/blog-posts/stylesheet.css
@@ -27,10 +27,11 @@ body {
 }
 
 .footer {
-	background-color: #eee;
-	border: 1px solid;
-	height: 80px;
-	text-align: center;
+    background-color: #eeeeee;
+    border: 1px solid #d9d9d9;
+    border-radius: 30px 30px 0 0;
+    height: 80px;
+    text-align: center;
 }
 
 .img-site {
@@ -44,11 +45,62 @@ body {
 }
 
 p {
-    padding: 5px;
+    padding: 5px 10px;
 }
 
 img {
     width: 96%;
     margin: 0 auto;
     padding: 5px;
+}
+
+img.img-cultural {
+    padding: 14px 5px;
+    width: 30%;
+}
+
+h1#eda {
+    color: #aaaaf4;
+    text-align: center;
+}
+
+h1#eda > span {
+    color: #bf0000;
+    font-size: 60px;
+    text-align: center;
+    text-shadow: 1px 1px #2f0000;
+}
+
+.header-cultural {
+    background-color: #ddd;
+    border: 1px solid #cacaca;
+    height: auto;
+    text-align: center;
+}
+ 
+h4, p {
+    margin-left: 10px;
+}
+
+.p-describe > p:first-child {
+    text-indent: 40px;
+}
+
+.p-describe {
+    float: left;
+    padding: 5px;
+    width: 66%;
+}
+
+h4 {
+    font-size: 1.6em;
+    color: #aaaaf4;
+}
+#after_eda {
+    border: 1px dashed #DDDDDD;
+    border-radius: 2px;
+}
+#h_eda {
+    margin: auto;
+    width: 35%;
 }
