--- a/blog-posts/stylesheet.css
+++ b/blog-posts/stylesheet.css
@@ -17,7 +17,7 @@ body {
 .header {
     background-color: #ddd;
     border: 1px solid #aaa;
-    height: 130px;
+    height: auto;
     text-align: center;
 }
 
@@ -27,7 +27,7 @@ body {
 }
 
 .footer {
-    background-color: #eeeeee;
+    background-color: #aaaaf4;
     border: 1px solid #d9d9d9;
     border-radius: 30px 30px 0 0;
     height: 80px;
@@ -72,9 +72,9 @@ h1#eda > span {
 }
 
 .header-cultural {
-    background-color: #ddd;
+    background-color: #aaaaf4;
     border: 1px solid #cacaca;
-    height: auto;
+    height: 130px;
     text-align: center;
 }
  
